--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
 	<string name="reminder_notification_title">Signed out of Briar</string>
 	<string name="reminder_notification_text">Tap to sign back in or swipe to dismiss.</string>
 	<string name="reminder_notification_channel_title">Briar Sign-in Reminder</string>
+	<string name="reminder_notification_do_not_show_again">Don\'t show again</string>
 	<string name="ongoing_notification_title">Signed into Briar</string>
 	<string name="ongoing_notification_text">Touch to open Briar.</string>
 	<plurals name="private_message_notification_text">
@@ -373,6 +374,8 @@
 
 	<!-- Settings Notifications -->
 	<string name="notification_settings_title">Notifications</string>
+	<string name="notify_sign_in_title">Remind me to sign in</string>
+	<string name="notify_sign_in_summary">Shows a reminder when the phone starts</string>
 	<string name="notify_private_messages_setting_title">Private messages</string>
 	<string name="notify_private_messages_setting_summary">Show alerts for private messages</string>
 	<string name="notify_private_messages_setting_summary_26">Configure alerts for private messages</string>
